# fractal-raymarcher

./: .gitignore  CMakeLists.txt  README.md  default.nix
shaders/: basic_sphere.glsl  default.vert  mandelbulb.glsl  raymarch.frag  vertex.glsl
src/: callbacks.cpp  camera.cpp  constants.h  loader.cpp  loader.h  main.cpp  shader.cpp  window_callbacks.cpp  window_callbacks.h
src/include/: callbacks.hpp  camera.hpp  constants.hpp  display.hpp  shader.hpp  window_callbacks.hpp
